# src/services/api/core/v1/payments/structs.go
@@ -1,6 +1,7 @@
 package payments
 
 import (
+	"ecomdream/src/domain/models"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -8,6 +9,11 @@ type CreatePaymentLinkRequest struct {
 	PlanID int `json:"plan_id"`
 	VersionID *string `json:"version_id,omitempty"`
 	PromocodeID *string `json:"promocode_id,omitempty"`
+}
+
+type AvailablePlansResponse struct {
+	Code int `json:"code"`
+	Plans []models.Plan `json:"plans"`
 }
 
 func (r *CreatePaymentLinkRequest) Validate(ctx *fiber.Ctx) (err error) {
