# src/services/api/core/v1/versions/structs.go
@@ -1,5 +1,7 @@
 package versions
 
+import "ecomdream/src/domain/models"
+
 type TrainVersionResponse struct {
 	Code int `json:"code"`
 	Message string `json:"message"`
@@ -10,5 +12,5 @@ type VersionInfoResponse struct {
 	Code int `json:"code"`
 	IsReady bool `json:"is_ready"`
 	TimeTraining string `json:"time_training"`
-	Info interface{}`json:"info"`
+	Info *models.VersionExtendedInfo `json:"info"`
 }
